<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airtime_balance"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:text="@string/dummy_value"
        android:textSize="20sp"
        android:layout_toRightOf="@id/textView"
        android:layout_toEndOf="@id/textView" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/make_balance"
        android:layout_below="@id/textView"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/button2"/>

</RelativeLayout>