<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_momo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/momo_assist"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/bt_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_momo"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_check_bal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/check_balance"/>

        <Button
            android:id="@+id/bt_send_pay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/send_pay"/>

        <Button
            android:id="@+id/bt_receive_pay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/receive_pay"/>

    </LinearLayout>


</RelativeLayout>